[package]
name = "field-offset"
version = "0.2.1"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
description = "Safe pointer-to-member implementation"
repository = "https://github.com/Diggsey/rust-field-offset"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
memoffset = "0.5.4"

[build-dependencies]
rustc_version = "0.2.3"
