[package]
name = "field-offset"
version = "0.3.4"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
description = "Safe pointer-to-member implementation"
repository = "https://github.com/Diggsey/rust-field-offset"
readme = "README.md"
license = "MIT OR Apache-2.0"
include = ["README.md", "LICENSE-*", "Cargo.toml", "build.rs", "src/"]

[dependencies]
memoffset = "0.6.0"

[build-dependencies]
rustc_version = "0.3.0"
